--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,6 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+# API Key configuration file, don't want this to be checked into GitHub
+Trello.config
